Frontend: Fixed the spacing issue

--- a/CyberPal-Desktop/src/Components/Navbar/index.css
+++ b/CyberPal-Desktop/src/Components/Navbar/index.css
@@ -1,25 +1,16 @@
 .navbar{
-
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
     padding: 32px;
-    /* gap: 101px; */
-
-    width: 100vw;
-
 }
 
 .navigation{
     display: flex;
     flex-direction: row;
-    align-items: flex-start;
     padding: 0px;
     gap: 32px;
-    
-    width: 520px;
-    height: 36px;
 }
 
 .profile-zone{
@@ -28,9 +19,6 @@
     align-items: flex-start;
     padding: 0px;
     gap: 16px;
-    
-    width: 190px;
-    height: 36px;
 }
 
 #chosen-one{
