--- a/CyberPal-Desktop/src/renderer/App.css
+++ b/CyberPal-Desktop/src/renderer/App.css
@@ -11,7 +11,8 @@
  body {
   position: relative;
   color: white;
-  height: 100vh;
+  /* height: 100vh; */
+  width: 100vw;
   background-color: var(--dark_purple);
   font-family: sans-serif;
   /* overflow-x: hidden; */
